# keallm

./: .env.local  .gitignore  adapter.py  base_qa_data.py  config.sh  ds2.json  ds2_1.json  ds3.json  loader.py  model.py  model.txt  new_data_module.py  patcher.py  pyproject.toml  test.py  test_train.py  train_sft.sh  train_sft_qwen.sh
data/: dataset_info.json  identity.json
data/FB15k-237/: dev.tsv  preprocess.py  relation2text.txt  test.py  test.tsv  train.tsv
data/MetaQA/: convert_kb_to_text.py  dev.tsv  entity2text.txt  get_relation.py  preprocess.py  preprocess2.py  relation2text.txt  test.tsv  test_old.tsv  train.tsv
data/MetaQA/1-hop/: dev.json  test.json
data/MetaQA/2-hop/: dev.json  test.json  train.json
data_module/: base_data_module.py  data_module.py  processor.py  utils.py
model_arch/: __init__.py  modeling_keallm.py
script/: eval_freeze.sh  train_sft.sh  train_sft_fb.sh  train_sft_fb_sp.sh  train_sft_keallm_16.sh  train_sft_keallm_2.sh  train_sft_keallm_32.sh  train_sft_keallm_32_fb.sh  train_sft_keallm_32_fb_llama13.sh  train_sft_keallm_32_fb_random.sh  train_sft_keallm_32_fb_random_eval.sh  train_sft_keallm_32_half.sh  train_sft_keallm_32_llama13.sh  train_sft_keallm_32_mistral.sh  train_sft_keallm_32_random.sh  train_sft_keallm_32_random_2.sh  train_sft_keallm_32_random_eval.sh  train_sft_keallm_4.sh  train_sft_keallm_8.sh  train_sft_keallm_lora.sh  train_sft_keallm_lora_fb.sh  train_sft_pt.sh  train_sft_pt_fb.sh
src/: train.py
src/keallm/: data_processing.py  evaluate.py  inference.py  main.py  model.py  train.py
(+26 files in other folders)
